retirado connectionString do web.config

--- a/Selia.Integrador/App.config
+++ b/Selia.Integrador/App.config
@@ -24,7 +24,7 @@
     <add key="Constants:AppSettings:HttpStatusCode:Sucesso" value="200,201,204" />
   </appSettings>
   <connectionStrings>
-    <add name="ConnectionStringIntegradorSQL" connectionString="Server=localhost;Database=SeliaIntegradorMdiasHomolog;User ID=sa;Password=selia123;" providerName="System.Data.SqlClient" />
+    <!--<add name="ConnectionStringIntegradorSQL" connectionString="Server=localhost;Database=SeliaIntegradorMdiasHomolog;User ID=sa;Password=selia123;" providerName="System.Data.SqlClient" />-->
     <!--<add name="ConnectionStringIntegradorSQL" connectionString="Server=192.168.1.202;Initial Catalog=SeliaIntegradorSANTAHELENA;User Id=sa; Password=redepres;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <startup>
